<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".PayOutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="631dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/buttonBackEdit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/arrow_circle_left"
            android:text="Button" />


        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/yeonsung_regular"
            android:text="@string/Edit"
            android:textColor="@color/endColor"
            android:textColorHint="@color/endColor"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="@string/Name"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape"
            android:gravity="center_vertical"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="@string/Address"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="177dp"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center|left"
                android:paddingLeft="8dp"
                android:text="@string/Phone"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="308dp"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/Payment_Method"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/cashondelivery" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittextshape"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27">

            <TextView
                android:layout_width="184dp"
                android:layout_height="63dp"
                android:layout_weight="1"
                android:background="@drawable/edittextshape"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/Total_Amount"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="end"
                android:inputType="none"
                android:paddingEnd="32dp"
                android:textColor="@color/textColor"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PlaceMyOrder"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/addtocartshape"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/Place_My_Order"
        android:textColor="@color/Color">

    </androidx.appcompat.widget.AppCompatButton>
</FrameLayout>