<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingEnd="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="647dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/edit"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:scaleType="centerCrop"
                android:text="@string/edit_p"
                android:textAllCaps="false"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/logOutButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginStart="230dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/logout" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileeditshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="171dp"
                android:layout_height="57dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="@string/Name"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileeditshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="175dp"
                android:layout_height="60dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="@string/Address"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileeditshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="127dp"
                android:layout_height="71dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="Email"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileeditshape"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="217dp"
                android:layout_height="69dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/yeonsung_regular"
                android:gravity="center"
                android:text="@string/Phone"
                android:textColor="@color/endColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/yeonsung_regular"
                android:inputType="phone" />
        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveInfoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/addtocartshape"
        android:elevation="5dp"
        android:fontFamily="@font/yeonsung_regular"
        android:text="@string/Save"
        android:textAllCaps="false"
        android:textColor="@color/Color"
        android:textSize="20sp" />


</FrameLayout>